Added a locking strategy around draft management
-at the top-level, the DraftManager locks around manipulation of a collection of DraftWrapper instances so that they can be long-lived shared instances
-this allows the DraftWrapper instances to internally manage a sort of read-write locking mechanism around the underlying data files it contains
-part of the complexity of this change (which persists and will likely be a long-term evolution into a new formalized shape) is the transition away from FileNotFoundExceptions into error return values
-note that this isn't quite a complete design, as it doesn't address the "read-modify-write" idiom to update the "Draft" meta-data (meaning that this can still be corrupted if concurrently modified) but this doesn't worsen that problem and does fix the more complex problem around access to the large draft data files
-in the future, we may change some of these callers to fail instead of blocking (blocking is preferable, as it makes all operations eventually complete, but could be frustrating if common use-cases hit this)